# SupraZone-Framework

./: .branch_marker  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SupraZone_Framework_Sysia_EN.py  configure_user.py  example_user_settings.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_user_settings.py  user_settings.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: SupraZone_v3.3.md
examples/: README.md  basic_usage.py  run_demo.py
src/: __init__.py  parameters.py  user_settings.py
suprazone/: __init__.py  configure_user.py  energy.py  example.py  fft_analysis.py
tests/: __init__.py  test_example.py  test_smoke.py
