[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "suprazone-framework"
version = "0.0.1"
description = "A physics-inspired, zero-entropy analytical engine for spiral resonance dynamics"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "sysia48", email = "157774841+sysia48@users.noreply.github.com"}
]
keywords = ["physics", "resonance", "spiral", "dynamics", "entropy", "analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "scipy>=1.7.0",
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "pandas>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/sysia48/SupraZone-Framework"
Repository = "https://github.com/sysia48/SupraZone-Framework"
Issues = "https://github.com/sysia48/SupraZone-Framework/issues"

[tool.setuptools]
packages = ["src"]
