[metadata]
name = suprazone-framework
version = 0.0.1
author = sysia48
description = A physics-inspired, zero-entropy analytical engine for spiral resonance dynamics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sysia48/SupraZone-Framework
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.10
install_requires =
    scipy>=1.7.0
    numpy>=1.21.0
    matplotlib>=3.4.0
    pandas>=1.3.0

[options.packages.find]
where = src
